--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+seaborn = "^0.13.2"
+matplotlib = "^3.9.2"
+yfinance = "^0.2.41"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
